Day_33_HW_adjust

--- a/Homework/Day_033_HW.ipynb
+++ b/Homework/Day_033_HW.ipynb
@@ -32,10 +32,12 @@
     "    訓練好的 model，在遇到新的 data 時，也能夠提供好的預測結果。\n",
     "    複雜的 model 或許在 training 時可以有高準確率，但連帶也可能造成overfiting。\n",
     "### 2. 分類問題與回歸問題分別可用的目標函數有哪些？\n",
+    "    Loss Function\n",
+    "    \n",
     "    分類問題（離散輸出）：\n",
-    "        可用 Logistic Regression、Support Vector Regression、Gradient Descent、Dicision Tree、Random Forest\n",
+    "        可用 交叉熵(cross-entropy)\n",
     "    回歸問題（連續輸出）：\n",
-    "        可用 Linear Regression、Support Vector Mechine"
+    "        可用 MSE、MAE"
    ]
   }
  ],
