Add math formula to Day_36_HW

--- a/Homework/Day_036_HW.ipynb
+++ b/Homework/Day_036_HW.ipynb
@@ -43,11 +43,11 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1, 0,\n",
-       "       1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1,\n",
-       "       1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0,\n",
-       "       1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 1, 1])"
+       "array([0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1,\n",
+       "       1, 0, 0, 1, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 0,\n",
+       "       0, 1, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 2,
@@ -72,6 +72,30 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$F_2 = \\frac{(1+2^2)*(precision*recall)}{(2^2*precision + recall)}$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Math\n",
+    "Math(r'F_2 = \\frac{(1+2^2)*(precision*recall)}{(2^2*precision + recall)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def f_score(y_test, y_pred_binarized, beta):\n",
@@ -83,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5664062499999999\n"
+      "0.4863813229571984\n"
      ]
     }
    ],
